@@ -1,16 +1,39 @@
 package ru.skypro.lessons.springboot.springbootmvc.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.core.io.ByteArrayResource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import ru.skypro.lessons.springboot.springbootmvc.dto.EmployeeDTO;
+import ru.skypro.lessons.springboot.springbootmvc.dto.ReportDTO;
+import ru.skypro.lessons.springboot.springbootmvc.model.Department;
 import ru.skypro.lessons.springboot.springbootmvc.model.Employee;
 import ru.skypro.lessons.springboot.springbootmvc.model.Position;
+import ru.skypro.lessons.springboot.springbootmvc.model.Report;
+import ru.skypro.lessons.springboot.springbootmvc.repository.DepartmentRepository;
 import ru.skypro.lessons.springboot.springbootmvc.repository.EmployeeRepository;
 import ru.skypro.lessons.springboot.springbootmvc.repository.PositionRepository;
+import ru.skypro.lessons.springboot.springbootmvc.repository.ReportRepository;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -19,10 +42,20 @@ public class EmployeeServiceImpl implements EmployeeService {
 
     private final EmployeeRepository employeeRepository;
     private final PositionRepository positionRepository;
+    private final DepartmentRepository departmentRepository;
 
-    public EmployeeServiceImpl(EmployeeRepository employeeRepository, PositionRepository positionRepository) {
+    private final ReportRepository reportRepository;
+
+    private final ObjectMapper objectMapper;
+
+    public EmployeeServiceImpl(EmployeeRepository employeeRepository, PositionRepository positionRepository,
+                               DepartmentRepository departmentRepository, ReportRepository reportRepository,
+                               ObjectMapper objectMapper) {
         this.employeeRepository = employeeRepository;
         this.positionRepository = positionRepository;
+        this.departmentRepository = departmentRepository;
+        this.reportRepository = reportRepository;
+        this.objectMapper = objectMapper;
     }
 
     @Override
@@ -30,7 +63,7 @@ public class EmployeeServiceImpl implements EmployeeService {
         Iterable<Employee> employees = employeeRepository.findAll();
         return StreamSupport.stream(employees.spliterator(), false)
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -39,7 +72,7 @@ public class EmployeeServiceImpl implements EmployeeService {
         if (position != null) {
             employees = employeeRepository.findByPositionName(position);
         } else {
-            employees = (List<Employee>) employeeRepository.findAll();
+            employees = employeeRepository.findAll();
         }
         return employees.stream()
                 .map(this::convertToDto)
@@ -47,7 +80,7 @@ public class EmployeeServiceImpl implements EmployeeService {
     }
 
     @Override
-    public EmployeeDTO getEmployeeById(int id) {
+    public EmployeeDTO getEmployeeById(Long id) {
         Employee employee = employeeRepository.findById(id).orElseThrow();
         return convertToDto(employee);
     }
@@ -56,32 +89,36 @@ public class EmployeeServiceImpl implements EmployeeService {
     public void addEmployee(List<EmployeeDTO> employeeDTO) {
         List<Employee> employees = employeeDTO.stream()
                 .map(this::convertToEntity)
-                .collect(Collectors.toList());
+                .toList();
         employeeRepository.saveAll(employees);
     }
 
     @Override
-    public EmployeeDTO getEmployeeFullInfo(int id) {
-        Employee employee = employeeRepository.findById(id).orElseThrow();
+    public EmployeeDTO getEmployeeFullInfo(Long id) {
+        Optional<Employee> employeeOptional = employeeRepository.findEmployeeWithPosition(id);
+        Employee employee = employeeOptional.orElseThrow();
         return convertToDto(employee);
     }
 
     @Override
-    public EmployeeDTO editEmployee(int id, EmployeeDTO employeeDTO) {
+    public EmployeeDTO editEmployee(Long id, EmployeeDTO employeeDTO) {
         Employee existingEmployee = employeeRepository.findById(id).orElseThrow();
-        // Обновляем данные существующего сотрудника
         existingEmployee.setName(employeeDTO.getName());
         existingEmployee.setSalary(employeeDTO.getSalary());
         if (employeeDTO.getPositionName() != null) {
             Position position = positionRepository.findByName(employeeDTO.getPositionName()).orElseThrow();
             existingEmployee.setPosition(position);
         }
+        if (employeeDTO.getDepartmentName() != null) {
+            Department department = departmentRepository.findByName(employeeDTO.getDepartmentName()).orElseThrow();
+            existingEmployee.setDepartment(department);
+        }
         Employee updatedEmployee = employeeRepository.save(existingEmployee);
         return convertToDto(updatedEmployee);
     }
 
     @Override
-    public void deleteEmployeeById(int id) {
+    public void deleteEmployeeById(Long id) {
         Employee employee = employeeRepository.findById(id).orElseThrow();
         employeeRepository.delete(employee);
     }
@@ -104,9 +141,44 @@ public class EmployeeServiceImpl implements EmployeeService {
 
     @Override
     public Page<EmployeeDTO> getEmployeesByPage(int page) {
-        Pageable pageable = PageRequest.of(page, 2);
+        Pageable pageable = PageRequest.of(page, 5);
         Page<Employee> employeePage = employeeRepository.findAll(pageable);
         return employeePage.map(this::convertToDto);
+    }
+
+    @Override
+    public List<EmployeeDTO> loadEmployeesFromFile(MultipartFile file) throws IOException {
+        String jsonContent = new String(file.getBytes(), StandardCharsets.UTF_8);
+        return objectMapper.readValue(jsonContent, new TypeReference<>() {
+        });
+    }
+
+    @Override
+    public Long getReportByDepartment() {
+        List<Object[]> results = employeeRepository.getReportByDepartment();
+        List<ReportDTO> reportDTOs = results.stream()
+                .map(row -> {
+                    ReportDTO reportDTO = new ReportDTO();
+                    reportDTO.setDepartmentName((String) row[0]);
+                    reportDTO.setEmployeeCount((Long) row[1]);
+                    reportDTO.setMaxSalary((Integer) row[2]);
+                    reportDTO.setMinSalary((Integer) row[3]);
+                    reportDTO.setAverageSalary((BigDecimal) row[4]);
+                    return reportDTO;
+                })
+                .toList();
+        return saveReportDTOsToJsonAndInTable(reportDTOs);
+    }
+
+    @Override
+    public void generateJsonFileFromReport(Long id) {
+        Report report = reportRepository.findById(id).orElse(null);
+        String content = report.getContent();
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter(report.getFileName()))) {
+            writer.write(content);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
     private EmployeeDTO convertToDto(Employee employee) {
@@ -114,15 +186,64 @@ public class EmployeeServiceImpl implements EmployeeService {
         employeeDTO.setName(employee.getName());
         employeeDTO.setSalary(employee.getSalary());
         employeeDTO.setPositionName(employee.getPosition().getName());
+        employeeDTO.setDepartmentName(employee.getDepartment().getName());
         return employeeDTO;
     }
 
     private Employee convertToEntity(EmployeeDTO employeeDTO) {
         Employee employee = new Employee();
         Position position = positionRepository.findByName(employeeDTO.getPositionName()).orElseThrow();
+        Department department = departmentRepository.findByName(employeeDTO.getDepartmentName()).orElseThrow();
+        employee.setDepartment(department);
         employee.setPosition(position);
         employee.setName(employeeDTO.getName());
         employee.setSalary(employeeDTO.getSalary());
         return employee;
     }
+
+    public Long saveReportDTOsToJsonAndInTable(List<ReportDTO> reportDTOs) {
+        Report report = null;
+        String fileName = "report";
+        LocalDateTime currentDateTime = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("ddMMyyyy_HHmm");
+        String formattedDateTime = currentDateTime.format(formatter);
+        String fileNameWithDateTime = fileName + "_" + formattedDateTime;
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            String json = objectMapper.writeValueAsString(reportDTOs);
+            Path filePath = Files.write(Path.of(fileNameWithDateTime), json.getBytes());
+            String fileContent;
+            try (BufferedReader reader = Files.newBufferedReader(filePath)) {
+                fileContent = reader.lines()
+                        .collect(Collectors.joining(System.lineSeparator()));
+            }
+            report = new Report();
+            report.setFileName(fileNameWithDateTime);
+            report.setContent(fileContent);
+            reportRepository.save(report);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return (report != null) ? report.getId() : null;
+    }
+
+    public Optional<Report> getReportById(Long id) {
+        return reportRepository.findById(id);
+    }
+
+    @Override
+    public ResponseEntity<ByteArrayResource> getReportResponseById(Long id) {
+        Optional<Report> reportOptional = getReportById(id);
+        if (reportOptional.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        Report report = reportOptional.get();
+        ByteArrayResource resource = new ByteArrayResource(report.getContent().getBytes());
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + report.getFileName())
+                .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+                .contentLength(resource.contentLength())
+                .body(resource);
+    }
+
 }
